# nfkc

./: CHANGELOG.md  README.md  release.nix  unicode-normal-forms.cabal
.github/workflows/: haskell.yml
reflex-platform/: github.json
src/Data/Text/: NFKC.hs
