cabal-version:      3.0
name:               unicode-normal-forms
version:            0.1.0.0
synopsis:           Cross-platform nfkc normalization
description:        NFKC normalization for both GHCJS and GHC
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2023 Obsidian Systems LLC
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Text.NFKC
    build-depends:    base
                    , text
    if !impl(ghcjs)
      build-depends: unicode-transforms
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
